--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@
                 radical: "羊",
                 strokes: 9,
                 meaning: [
-                    "好的、善的。",
-                    "容貌、姿態漂亮。",
-                    "感到滿意或快樂。"
+                    "哺味道好。《說文解字．羊部》：「美，甘也。」清．段玉裁．注：「甘者五味之一，而五味之美皆曰甘。」《黃帝內經》：「草生五味，五味之美，不可勝極。」宋．周邦彥〈驀山溪〉詞：「因箇甚，煙霚底，獨愛蓴羮美。」明．朱權《荊釵記》第三齣：「奇珍擺列，渾如洞府仙寰，美食嘉殽，堪並鳳髓龍肝。」",
+                    " 良好。如：「美德」、「美夢」。《管子．小匡》：「美金以鑄戈劍矛戟，試諸狗馬。」《三國演義》第一二○回：「舉善薦賢，乃美事也。」《醒世恆言．卷二九．盧太學詩酒傲王侯》：「那知汪知縣因扳翻了個有名富豪，京中多道他有風力，到得了個美名，行取入京，陞為給事之職。」",
+                    "泛指良好之事物。如：「君子有成人之美」。《公羊傳．僖公十年》：「桓公之享國也長，美見乎天下。」《管子．五行》：「人與天調，然後天地之美生。」"
+                    "外觀好看。如：「她長得十分甜美。」《孟子．梁惠王下》：「百姓聞王車馬之音，見羽旄之美，舉欣欣然有喜色而相告。」《三國演義》第六九回：「汝貌美，可惜無壽。」《初刻拍案驚奇》卷二：「姚氏有一女，名喚滴珠，年方十六，生得如花似玉，美冠一方。」"
+                    "貌美之女子。《詩經．鄭風．野有蔓草》：「有美一人，清揚婉兮。」"
+                    "使變好。如：「養顏美容」。《詩經．周南．關雎》：「美教化，移風俗。」"
+                    "肥沃。《韓非子．難二》：「必壤地美，然後草木碩大。」《幼學瓊林．卷一．地輿類》：「美田曰膏腴之田。」''
+                    "誇讚、褒獎。如：「讚美」。《韓非子．五蠹》：「然則今有美堯、舜、湯、武、禹之道於當今之世者，必為新聖笑矣。」《郎潛紀聞初筆．卷七．亭林先生壽序》：「壽序諛詞，自前明歸震川始入文稿。然每觀近今名人集中，偶載一二，亦罕有不溢美者。」"
+                    "喜歡、樂意。南朝宋．謝靈運〈擬魏太子鄴中集詩序．平原侯植〉：「公子不及世事，但美遨遊，然頗有憂生之嗟。」《醒世恆言．卷四○．馬當神風送滕王閣》：「滿座之人見勃年幼，卻又面生，心各不美。」"
+                    "得意。如：「少臭美了！」"
+                    "美國之簡稱。如：「中、美、英、法」。"
+                    "美洲之簡稱。如：「南美」、「北美」、「歐美國家」。"   
                 ],
                 phrases: [
                     "美麗", "美國", "美術", "美味"
@@ -406,4 +415,5 @@
     </script>
 
 </body>
+
 </html>
